[package]
name = "nazgul"
description = "A library that implements various ring signature schemes"
readme = "README.md"
license = "MIT"
version = "1.0.0"
authors = ["Edwin Jose Palathinkal <edwinhere@gmail.com>"]
edition = "2018"
keywords = ["cryptography", "crypto", "ristretto", "ristretto255", "monero"]
categories = ["no-std", "cryptography::cryptocurrencies", "cryptography", "wasm"]
repository = "https://github.com/edwinhere/nazgul"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek = { version = "4", default-features = false }
digest = { version = "^0.10", default-features = false }
rand_core = { version = "^0.6.4", default-features = false }

[dev-dependencies]
sha2 = "^0.10"
sha3 = "^0.10"
blake2 = "^0.10"
rand = "^0.8"

[features]
default = ["std"]
std = [
    "digest/std",
    "rand_core/std",
    "curve25519-dalek/alloc",
    "curve25519-dalek/zeroize",
    "curve25519-dalek/precomputed-tables",
    "curve25519-dalek/rand_core",
    "curve25519-dalek/digest"
]
no_std = [
    "curve25519-dalek/alloc",
    "curve25519-dalek/zeroize",
    "curve25519-dalek/rand_core",
    "curve25519-dalek/digest",
    "rand_core/alloc",
    "digest/alloc"
]
